--- a/css/common.css
+++ b/css/common.css
@@ -194,3 +194,27 @@ h2 {
         text-align: center;
     }
 }
+@media only screen and (min-width: 768px) {
+    .mateix {
+        text-align: center;
+    }
+}
+.profileImage {
+    width: 250px;
+    height: 229px;
+}
+@media only screen and (max-width: 1029px) {
+    .addinfo {
+        width: 100%;
+    }
+    .perInfo {
+        width: auto;
+    }
+}
+@media only screen and (max-width: 530px) {
+    .profileImage {
+        width: auto;
+        height: auto;
+        margin: auto;
+    }
+}
