--- a/css/common.css
+++ b/css/common.css
@@ -203,7 +203,7 @@ h2 {
     width: 250px;
     height: 229px;
 }
-@media only screen and (max-width: 1029px) {
+@media only screen and (max-width: 1040px) {
     .addinfo {
         width: 100%;
     }
@@ -216,5 +216,11 @@ h2 {
         width: auto;
         height: auto;
         margin: auto;
+    }
+    .profileImage img {
+        width: 75%;
+        height: 75%;
+        margin: auto;
+        display: block;
     }
 }
